Fix to display on mobile
It's not as clear on mobile that scrolling down is necessary.

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,10 @@
 }
 
 .section {
-    min-height: 100vh;
+    min-height: 60vh;
+    @media (min-width: 720px) {
+      min-height: 100vh;
+    }
 
     .section-content {
         padding: 24px;
